replaced all Observer/Observable with PropertyChangeListener
Java deprecated this perfectly good feature in favor a more complicated solution.  That is SO RUDE.